/*
Copyright 2021 The tKeel Authors.
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

package io.tkeel.rudder.api.oauth2.v1;

option go_package = "github.com/tkeel-io/tkeel/api/oauth2/v1;v1";
option java_multiple_files = true;
option java_package = "io.tkeel.rudder.api.plugin.v1";
option java_outer_classname = "OpenapiProtoV1";

// @plugins=protoc-gen-go-errors
// 错误
enum Error {
  // @msg=未知类型
  // @code=UNKNOWN
  OAUTH2_ERR_UNKNOWN = 0;
  // @msg=Secret不匹配
  // @code=PERMISSION_DENIED
  OAUTH2_ERR_SECRET_NOT_MATCH = 1;
  // @msg=白名单中已存在
  // @code=ALREADY_EXISTS
  OAUTH2_ERR_CLIENT_ID_ALREADY_EXISTS = 2;
  // @msg=无效的插件ID
  // @code=PERMISSION_DENIED
  OAUTH2_ERR_INVALID_PLUGIN_ID = 3;
  // @msg=请求后端存储错误
  // @code=INTERNAL
  OAUTH2_ERR_INTERNAL_STORE = 4;
  // @msg=内部错误
  // @code=INTERNAL
  OAUTH2_ERR_INTERNAL_ERROR = 5;
  // @msg=password不匹配
  // @code=PERMISSION_DENIED
  OAUTH2_ERR_PASSWORD_NOT_MATCH = 6;
  // @msg=token无效
  // @code=PERMISSION_DENIED
  OAUTH2_ERR_INVALID_TOKEN = 7;
  // @msg=无权限
  // @code=PERMISSION_DENIED
  OAUTH2_ERR_PERMISSION_DENIED = 8;
  // @msg=密码不合规范
  // @code=UNKNOWN
  OAUTH2_ERR_PASSWORD_NOT_COMPLIANT = 9;
}